Closed Bug 434492 Opened 16 years ago Closed 16 years ago

xpcshell doesn't properly report error messages

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1a1

People

(Reporter: glandium, Assigned: glandium)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
When, for example, the file given to xpcshell isn't readable, it reports:
No error message available for error number 1

This is due to ancient code that has been removed as part of bug #325951. The necessary cleanup didn't happen in xpcshell.
Attachment #321589 - Flags: review?(brendan)
Attachment #321589 - Flags: review?(brendan) → review+
Assignee: nobody → mh+mozilla
Pushed as 15837:9834d1ab22d9.
Status: NEW → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: