Bug 434492 - "xpcshell doesn't properly report error messages" [p=mh+mozilla@glandium.org (Mike Hommey) r=brendan]